--- a/CDI WEB Rep/HTML/curso.html
+++ b/CDI WEB Rep/HTML/curso.html
@@ -40,6 +40,8 @@
             que este está enfocado en el lenguaje de programación python que más adelante se definirá en mayor detalle.</strong> En resumen, el usuario podrá aprender lo más básico como 
             los tipos de datos, condicionales, palabras reservadas, estructuras de control de flujo, funciones, listas, diccionarios y mucho más.
         </p>
+
+        <h1>Cambio en Git</h1>
     </section>
     
 </body>
