--- a/CDI WEB Rep/HTML/index.html
+++ b/CDI WEB Rep/HTML/index.html
@@ -20,8 +20,7 @@
     </header>
 
     <div id="Foto">
-        
-        <img src="../Fotos/fondo.jpg">
+        <img src="/Fotos/fondo.jpg" alt="">
 
         <div id="Titulo">
 
