Cambiando de id a clases

--- a/CDI WEB Rep/HTML/login.html
+++ b/CDI WEB Rep/HTML/login.html
@@ -22,8 +22,8 @@
     
     <form id="contenedor">
         <h1 id="Texto">Inicie Sesión</h1>
-        <input type="email" id="emailentry" placeholder="Email">
-        <input type="password" id="contraseñaentry" placeholder="Contraseña">
+        <input type="email" class="form_imput" placeholder="Email">
+        <input type="password" class="form_imput" placeholder="Contraseña">
         <button type="submit" id="Boton">Iniciar Sesión</button>
         <a href="restablecer.html" id="restablecer">¿Olvidó Su Contraseña? Restablecer Ahora</a>
         <a href="signin.html" id="signin">¿Aún no tiene una cuenta?</a>
