Cambiando id por clases y realizando los cambios en el css

--- a/CDI WEB Rep/HTML/login.html
+++ b/CDI WEB Rep/HTML/login.html
@@ -20,11 +20,11 @@
         </nav>
     </header>
     
-    <form id="contenedor">
-        <h1 id="Texto">Inicie Sesión</h1>
+    <form class="container">
+        <h1 class="login_text">Inicie Sesión</h1>
         <input type="email" class="form_imput" name="email" placeholder="Email">
         <input type="password" class="form_imput" name="password" placeholder="Contraseña">
-        <button type="submit" id="Boton">Iniciar Sesión</button>
+        <button type="submit" class="login_btn">Iniciar Sesión</button>
         <a href="restablecer.html" id="restablecer">¿Olvidó Su Contraseña? Restablecer Ahora</a>
         <a href="signin.html" id="signin">¿Aún no tiene una cuenta?</a>
     </form>
