--- a/CDI WEB Rep/HTML/signin.html
+++ b/CDI WEB Rep/HTML/signin.html
@@ -20,15 +20,15 @@
         </nav>
     </header>
     
-    <div id="contenedor">
-        <h1 id="Texto">Crear Cuenta</h1>
-        <input type="text" id="nombreentry" placeholder="    Nombre">
-        <input type="email" id="emailentry" placeholder="    Correo Electronico">
-        <input type="password" id="contraseñaentry" placeholder="    Contraseña">
-        <input type="password" id="contraseñaentry2" placeholder="    Confirmar Contraseña">
-        <button type="submit" id="Boton">Crear Cuenta</button>
-        <a href="login.html" id="signin">¿Ya tiene una cuenta? Iniciar Sesión</a>
-    </div>
+    <form class="signin_form">
+        <h1 class="signin_text">Crear Cuenta</h1>
+        <input type="text" class="form_entry" placeholder="Nombre">
+        <input type="email" class="form_entry" placeholder="Correo Electronico">
+        <input type="password" class="form_entry" placeholder="Contraseña">
+        <input type="password" class="form_entry" placeholder="Confirmar Contraseña">
+        <button type="submit" class="signin_btn">Crear Cuenta</button>
+        <a href="login.html" id="login">¿Ya tiene una cuenta? Iniciar Sesión</a>
+    </form>
 
 </body>
 </html>
