Agregando names a los imputs

--- a/CDI WEB Rep/HTML/signin.html
+++ b/CDI WEB Rep/HTML/signin.html
@@ -22,10 +22,10 @@
     
     <form class="signin_form">
         <h1 class="signin_text">Crear Cuenta</h1>
-        <input type="text" class="form_entry" placeholder="Nombre">
-        <input type="email" class="form_entry" placeholder="Correo Electronico">
-        <input type="password" class="form_entry" placeholder="Contraseña">
-        <input type="password" class="form_entry" placeholder="Confirmar Contraseña">
+        <input type="text" class="form_entry" name="username" placeholder="Nombre">
+        <input type="email" class="form_entry" name="email" placeholder="Correo Electronico">
+        <input type="password" class="form_entry" name="password" placeholder="Contraseña">
+        <input type="password" class="form_entry" name="confirm_password" placeholder="Confirmar Contraseña">
         <button type="submit" class="signin_btn">Crear Cuenta</button>
         <a href="login.html" id="login">¿Ya tiene una cuenta? Iniciar Sesión</a>
     </form>
